--- a/config.yaml
+++ b/config.yaml
@@ -2,7 +2,9 @@
 dataset:
   data_root: "data"  
   file_pattern: "MPRAGE_MNI_norm.nii.gz"
+  # Target shape for resizing (Depth, Height, Width)
   target_shape: [64, 64, 64]
+  # Number of subprocesses for data loading (0 = main process)
   num_workers: 0     
 
 model:
@@ -15,10 +17,14 @@ training:
   epochs: 50
   batch_size: 4
   lr: 0.0002
-  n_critic: 5
-  lambda_gp: 10
+  n_critic: 5        # Discriminator steps per Generator step
+  lambda_gp: 10      # Gradient penalty coefficient
   device: "cuda"     # Automatically defaults to CPU if CUDA is not available
   seed: 42           # Explicit seed for managing random elements
 
 output:
   save_dir: "results"
+  # Save generated sample images every N batches
+  sample_interval: 400
+  # Save model checkpoints every N epochs
+  checkpoint_interval: 10
